--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -8,11 +8,11 @@
   <meta name="description" content="Description of the page less than 150 characters">
   <link rel="icon" type="image/png" href="images/favicon.jpg">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-  <link rel='stylesheet' href='styles.css'>
+  <link rel='stylesheet' href='1-styles.css'>
 </head>
 
 <body>
-  <!-- <!– Header –> -->
+  <!-- Header -->
   <header class="header" data-section-theme="dark">
     <div class="container">
       <div class="header-logo">
@@ -47,9 +47,9 @@
       </nav>
     </div>
   </header>
-  <!-- <!– Main –> -->
+  <!-- Main -->
   <main>
-    <!-- <!– Hero section –> -->
+    <!-- Hero section -->
     <section class="section-hero" data-section-theme="dark">
       <div class="container">
         <div class="section-body">
@@ -60,8 +60,8 @@
         </div>
       </div>
     </section>
-    <!-- <!– Services section –> -->
-    <section class="section-services" id="services" class="section">
+    <!-- Services section -->
+    <section id="services" class="section section-services">
       <div class="container">
         <header class="section-header">
           <h2 class="section-title">Services</h2>
@@ -105,8 +105,8 @@
         </div>
       </div>
     </section>
-    <!-- <!– Works section –> -->
-    <section class="section-works" id="works" class="section" data-section-theme="dark">
+    <!-- Works section -->
+    <section id="works" class="section section-works" data-section-theme="dark">
       <div class="container">
         <header class="section-header">
           <h2 class="section-title">Works</h2>
@@ -154,8 +154,8 @@
         </div>
       </div>
     </section>
-    <!-- <!– About Us section –> -->
-    <section class="section-about-us" id="about" class="section">
+    <!-- About Us section -->
+    <section id="about" class="section section-about-us">
       <div class="container">
         <header class="section-header">
           <h2 class="section-title">About Us</h2>
@@ -169,16 +169,16 @@
             <div class="col-1-2">
               <h3>Who are we</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem
-                iste dicta quibusdam atque maxime cum!</p>
+                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus
+                quidem iste dicta quibusdam atque maxime cum!</p>
               <h3>Our culture</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem
-                iste dicta quibusdam atque maxime cum!</p>
+                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus
+                quidem iste dicta quibusdam atque maxime cum!</p>
               <h3>How we work</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem
-                iste dicta quibusdam atque maxime cum!</p>
+                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus
+                quidem iste dicta quibusdam atque maxime cum!</p>
             </div>
           </div>
         </div>
@@ -187,8 +187,8 @@
         </div>
       </div>
     </section>
-    <!-- <!– Latest news section –> -->
-    <section class="section-latest-news" id="latest_news" class="section">
+    <!-- Latest news section -->
+    <section id="latest_news" class="section section-latest-news">
       <div class="container">
         <header class="section-header">
           <h2 class="section-title">Latest News</h2>
@@ -214,9 +214,9 @@
                 </div>
                 <p class="card-category">Digital Life</p>
                 <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum
-                  ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non
-                  vidit. Nos commodius agimus. An nisi populari fama?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo?
+                  Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit
+                  non vidit. Nos commodius agimus. An nisi populari fama?</p>
                 <small>By William A.</small>
               </article>
             </li>
@@ -227,9 +227,10 @@
                 </div>
                 <p class="card-category">Social</p>
                 <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est
-                  a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis
-                  est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim
+                  est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris
+                  generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
+                </p>
                 <small>By Frances J.</small>
               </article>
             </li>
@@ -237,8 +238,8 @@
         </div>
       </div>
     </section>
-    <!-- <!– Testimonials section –> -->
-    <section class="section-testimonial" id="testimonial" class="section">
+    <!-- Testimonials section -->
+    <section id="testimonial" class="section section-testimonial">
       <div class="container">
         <header class="section-header">
           <h2 class="section-title">Testimonials</h2>
@@ -250,7 +251,8 @@
               <article class="card-testimonial">
                 <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100" class="card-avatar">
                 <blockquote class="card-quote">
-                  <p>I am completely blown away. Thanks to Techium, we’ve just launched our 5th website!
+                  <p>I am completely blown away. Thanks to Techium, we’ve just launched our 5th
+                    website!
                     <cite>Yuri Y.</cite>
                   </p>
                 </blockquote>
@@ -281,16 +283,16 @@
         </div>
       </div>
     </section>
-    <!-- <!– Contact section –> -->
-    <section class="section-contact" id="contact" class="section">
+    <!-- Contact section -->
+    <section id="contact" class="section section-contact">
       <div class="container">
         <header class="section-header">
           <h2 class="section-title">Contact</h2>
           <p class="section-tagline">We’d love to hear from you!</p>
         </header>
         <div class="section-body">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
-            tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
+            modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
         </div>
         <div class="section-footer">
           <a href="#" class="button">Get in touch</a>
@@ -298,7 +300,7 @@
       </div>
     </section>
   </main>
-  <!-- <!– Footer –> -->
+  <!-- Footer -->
   <footer class="footer" data-section-theme="dark">
     <div class="container">
       <div class="row">
