--- a/accessibility/skip-links/00-article.html
+++ b/accessibility/skip-links/00-article.html
@@ -6,20 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Article - Techium</title>
   <meta name="description" content="Description of the page less than 150 characters">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+  <link rel="icon" type="image/png" href="../images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="01-styles.css">
 </head>
 
 <body class="article-page">
-  <nav aria-label="skip links">
+  <!-- Skip links -->
+  <nav aria-label="Skip links">
     <ul class="off-screen">
       <li><a href="#a11y-primary-nav" class="skip-link">Skip to primary navigation</a></li>
-      <li><a href="#a11y-main-content
-        " class="skip-link">Skip to main content</a></li>
+      <li><a href="#a11y-main-content" class="skip-link">Skip to main content</a></li>
     </ul>
   </nav>
+
   <!-- Header -->
   <header class="header" data-section-theme="dark">
     <div class="container">
