--- a/accessibility/skip-links/01-index.html
+++ b/accessibility/skip-links/01-index.html
@@ -14,14 +14,13 @@
 
 <body>
   <!-- Skip links -->
-  <nav aria-label="skip links">
+  <nav aria-label="Skip links">
     <ul class="off-screen">
       <li><a href="#a11y-primary-nav" class="skip-link">Skip to primary navigation</a></li>
-      <li><a href="#a11y-main-content
-        " class="skip-link">Skip to main content</a></li>
+      <li><a href="#a11y-main-content" class="skip-link">Skip to main content</a></li>
     </ul>
   </nav>
-  <!-- <!– Header –> -->
+  <!--Header -->
   <header class="header" data-section-theme="dark">
     <div class="container">
       <div class="header-container">
@@ -78,10 +77,10 @@
       </div>
     </div>
   </header>
-  <!-- <!– Main –> -->
+  <!--Main -->
   <main id="a11y-main-content" tabindex="-1">
     <h1 class="visually-hidden">Homepage</h1>
-    <!-- <!– Hero section –> -->
+    <!--Hero section -->
     <section class="section-hero hero-homepage" data-section-theme="dark">
       <div class="container">
         <div class="section-body">
@@ -92,7 +91,7 @@
         </div>
       </div>
     </section>
-    <!-- <!– Services section –> -->
+    <!--Services section -->
     <section id="services" class="section section-services">
       <div class="container">
         <header class="section-header">
@@ -135,7 +134,7 @@
         </div>
       </div>
     </section>
-    <!-- <!– Works section –> -->
+    <!--Works section -->
     <section id="works" class="section section-works" data-section-theme="dark">
       <div class="container">
         <header class="section-header">
@@ -184,7 +183,7 @@
         </div>
       </div>
     </section>
-    <!-- <!– About Us section –> -->
+    <!--About Us section -->
     <section id="about" class="section section-about-us">
       <div class="container">
         <header class="section-header">
@@ -202,17 +201,17 @@
             </div>
             <div class="col-1-2">
               <h3>Who are we</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem
-                iste dicta quibusdam atque maxime cum!</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
+                cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque
+                maxime cum!</p>
               <h3>Our culture</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem
-                iste dicta quibusdam atque maxime cum!</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
+                cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque
+                maxime cum!</p>
               <h3>How we work</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem
-                iste dicta quibusdam atque maxime cum!</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium
+                cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque
+                maxime cum!</p>
             </div>
           </div>
         </div>
@@ -221,7 +220,7 @@
         </div>
       </div>
     </section>
-    <!-- <!– Latest news section –> -->
+    <!--Latest news section -->
     <section id="latest_news" class="section section-latest-news">
       <div class="container">
         <header class="section-header">
@@ -240,8 +239,8 @@
                 </div>
                 <p class="card-category">Career</p>
                 <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat.
-                  Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
+                  modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                 <small>By Kelly D.</small>
               </article>
             </li>
@@ -256,9 +255,9 @@
                 </div>
                 <p class="card-category">Digital Life</p>
                 <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum
-                  ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non
-                  vidit. Nos commodius agimus. An nisi populari fama?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain
+                  tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus.
+                  An nisi populari fama?</p>
                 <small>By William A.</small>
               </article>
             </li>
@@ -273,9 +272,9 @@
                 </div>
                 <p class="card-category">Social</p>
                 <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est
-                  a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis
-                  est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo
+                  praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria;
+                  Apparet statim, quae sint officia, quae actiones.</p>
                 <small>By Frances J.</small>
               </article>
             </li>
@@ -283,7 +282,7 @@
         </div>
       </div>
     </section>
-    <!-- <!– Testimonials section –> -->
+    <!--Testimonials section -->
     <section id="testimonial" class="section section-testimonial">
       <div class="container">
         <header class="section-header">
@@ -319,8 +318,7 @@
                 <img src="../images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100"
                   class="card-avatar">
                 <blockquote class="card-quote">
-                  <p>I love your system. Definitely worth the investment. I’d be lost without Techium
-                    company.
+                  <p>I love your system. Definitely worth the investment. I’d be lost without Techium company.
                     <cite>Sven H.</cite>
                   </p>
                 </blockquote>
@@ -330,7 +328,7 @@
         </div>
       </div>
     </section>
-    <!-- <!– Contact section –> -->
+    <!--Contact section -->
     <section id="contact" class="section section-contact">
       <div class="container">
         <header class="section-header">
@@ -338,8 +336,8 @@
           <p class="section-tagline">We like to know new people</p>
         </header>
         <div class="section-body">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
-            tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At
+            eum nihili facit; Quae contraria sunt his, malane?</p>
         </div>
         <div class="section-footer">
           <a href="contact.html" class="button">Get in touch</a>
@@ -347,7 +345,7 @@
       </div>
     </section>
   </main>
-  <!-- <!– Footer –> -->
+  <!--Footer -->
   <footer class="footer" data-section-theme="dark">
     <div class="container">
       <div class="row">
