--- a/accessibility/fix-a11y/04-index.html
+++ b/accessibility/fix-a11y/04-index.html
@@ -21,7 +21,7 @@
   <div class="header">
     <div>
       <div>
-        <div><a href="#"><img src="img/logo.png" alt="logo"></a></div>
+        <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
         <div class="nav">
           <div>
             <p><a href="#">Home</a></p>
